# oncutf

./: .coverage  .cursorignore  .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  DELEGATE_REFACTORING_PLAN.md  DEVELOPMENT.md  KEYBOARD_SHORTCUTS_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  OPTIMIZATION_ROADMAP.md  PROJECT_RULES.md  PROJECT_STATUS_2026-01-03.md  PROJECT_STATUS_2026-01-04.md  README.md  TODO.md  benchmark_report_1751786908.json  benchmark_report_1751786909.json  benchmark_report_1751786912.json  benchmark_report_1751786913.json  benchmark_report_1751786925.json  bulk_fix_pyqt.py  codex.patch  config.py  create_test_config.py  debug_fonts.py  debug_metadata.py  demo_validation.py  final_theme_test.py  fix_docstrings.py  git_auto_snapshot.sh  icon_comparison_test.py  la.txt  logger_helper.py  logger_setup.py  main.py  main_window.py  (+38 more)
.ai/: _recap_prompt.txt
.cursor/: config.json
.github/: copilot-instructions.md
.vscode.example/: README.md  launch.json  settings.json
core/: __init__.py  advanced_cache_manager.py  application_context.py  application_service.py  async_operations_manager.py  backup_manager.py  batch_operations_manager.py  batch_processor.py  cancellable_file_loader.py  column_manager.py  config_imports.py  conflict_resolver.py  database_manager.py  database_manager_v2.py  dialog_manager.py  direct_metadata_loader.py  drag_cleanup_manager.py  drag_manager.py  drag_visual_manager.py  event_handler_manager.py  file_item.py  file_load_manager.py  file_load_worker.py  file_loader.py  file_operations_manager.py  file_store.py  file_validation_manager.py  hash_manager.py  hash_operations_manager.py  hash_worker.py  initialization_manager.py  initialization_orchestrator.py  initialization_worker.py  lazy_metadata_manager.py  memory_manager.py  metadata_command_manager.py  metadata_commands.py  metadata_manager.py  metadata_operations_manager.py  metadata_staging_manager.py  (+32 more)
docs/: 2025-12-21_metadata_refactor_plan.md  2025-12-22-win-refactoring-plan.md  2025-12-23-metadata-tree-refactoring-plan.md  2025-12-24-dawnhour-plan.md  2025-12-24-post-cleanup-status.md  2025-12-24-win-cleaning-plan.md  2025-12-25_architectural_review.md  2025_12_19.md  20260116_report.md  250121_summary.md  260121_summary.md  260125_summary.md  260130_implementation_plan.md  ARCHITECTURE.md  ARCH_REFACTOR_PLAN.md  BEHAVIORS_REFACTORING_PLAN.md  COLOR_DATABASE_IMPLEMENTATION.md  COLUMN_REORDERING_PLAN.md  Claude_opus_2025_12_09.md  FILE_TABLE_HEADER.md  Gemini_2025_12_09.md  MIGRATION_STANCE.md  PERFORMANCE_BASELINE.md  PHASE1A_METHODS_MAP.md  PHASE1D_METHODS_MAP.md  PHASE1D_QUICK_GUIDE.md  PHASE1D_READY.md  PHASE1_SUMMARY.md  PHASE2_EXECUTION_PLAN.md  PHASE2_SUMMARY.md  PHASE3.1_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE5_AUDIT.md  PHASE5_COMPLETE.md  PHASE5_EXECUTION_PLAN.md  PHASE5_SUMMARY.md  PHASE6_COMPLETE.md  PHASE7_EXECUTION_PLAN.md  PROGRESS_SUMMARY.md  (+71 more)
examples/: font_system_quickstart.py
logs/: benchmark_report_1751786368.json  benchmark_report_1751786369.json  benchmark_report_1751786372.json  benchmark_report_1751786373.json  benchmark_report_1751786385.json  oncutf_debug.log.1  oncutf_debug.log.2  oncutf_debug.log.3
models/: file_entry.py  file_item.py  file_table_model.py  results_table_model.py
modules/: base_module.py  counter_module.py  metadata_module.py  name_transform_module.py  original_name_module.py  specified_text_module.py  text_removal_module.py
oncutf/: __init__.py  __main__.py  config.py
reports/: project_structure.md  structure.md
resources/: fonts.qrc  oncutf_tree4.txt
scripts/: README.md  add_module_docstrings.py  analyze_metadata_fields.py  audit_boundaries.py  audit_code.sh  benchmark_parallel_loading.py  clean_project.sh  extract_docstrings.py  extract_full_structure.py  fix_module_dates.py  fix_type_ignore.py  generate_fonts_rc.py  generate_project_context.py  generate_project_report.py  logger_analyzer.py  metadata_comparison_analysis.py  performance_profiler.py  profile_cache_strategy.py  profile_mainwindow.py  profile_memory.py  profile_metadata_loading.py  profile_multi_runs.py  profile_rename_preview.py  profile_startup.py  run_all_tests.py  test_color_grid_menu.py  test_hash_dialog_shortcuts.py  test_html_icon.py  test_parallel_hash.py  test_preview_debounce.py  test_qss.py  test_results_dialog.py  translate_greek_to_english.py
test_results/: comprehensive_test_report_1751753739.json  unit_tests.xml
tests/: conftest.py  mocks.py  test_backup_integration.py  test_backup_manager.py  test_backup_simple.py  test_cache_rename_path.py  test_column_management_behavior.py  test_column_management_mixin.py  test_counter.py  test_counter_collision.py  test_counter_module.py  test_counter_scope.py  test_counter_scope_integration.py  test_custom_msgdialog.py  test_database_system.py  test_datetime_edit_dialog.py  test_enhanced_progress.py  test_file_entry.py  test_file_group.py  test_file_grouper.py  test_file_item.py  test_file_load_manager.py  test_file_size_formatter.py  test_filename_validator.py  test_filesize.py  test_filesystem_monitor.py  test_hash_manager.py  test_hash_worker_progress.py  test_hierarchical_combo_box.py  test_human_readable.py  test_json_config_manager.py  test_loading_dialog.py  test_logger_integration.py  test_logging.py  test_main_py.py  test_main_window_controller.py  test_memory_profiling.py  test_metadata.py  test_metadata_commands.py  test_metadata_entry.py  (+45 more)
tools/: ICON_MIGRATION_README.md  README.md  add_module_docstrings.py  analyze_metadata_fields.py  audit_boundaries.py  benchmark_parallel_loading.py  fix_module_dates.py  fix_type_ignore.py  generate_project_report.py  icon_migration_viewer.py  logger_analyzer.py  metadata_comparison_analysis.py  migrate_icons.py  profile_mainwindow.py  profile_metadata_loading.py  profile_multi_runs.py  profile_rename_preview.py  profile_startup.py  test_hash_dialog_shortcuts.py  test_parallel_hash.py  test_results_dialog.py  test_shortcuts_behavior.py  translate_greek_to_english.py  (+1 more)
utils/: fonts.py  (+70 more)
(+1006 files in other folders)
