[project]
name = "oncutf"
version = "1.3.0"
description = "Advanced Batch File Renamer with EXIF Metadata Support and Professional UI"
authors = [
    {name = "Michael Economou", email = "info@oncut.gr"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["file-renamer", "batch-rename", "exif", "metadata", "photography", "pyqt5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt5>=5.15.11",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.15.0",
    "PyQt5-stubs>=5.15.6.0",
    "Pillow>=9.0.0",
    "charset-normalizer>=3.0.0",
    "psutil>=6.1.0",
    "aiofiles>=24.1.0",
    "typing_extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0"
]
test = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# IMPORTANT: Must match actual package layout (oncutf/core/, oncutf/ui/, etc.)
include = ["oncutf*"]
exclude = ["tests*", "docs*", "examples*", "scripts*", "temp*", "backups*", "reports*", "logs*", "assets*", "resources*"]

[project.urls]
Homepage = "https://github.com/mecondev/oncutf"
Repository = "https://github.com/mecondev/oncutf"
Documentation = "https://github.com/mecondev/oncutf/tree/main/docs"
Issues = "https://github.com/mecondev/oncutf/issues"

# --------------------------
# mypy configuration
# --------------------------
# NOTE: Qt/UI errors are suppressed via disable_error_code in Tier 3 overrides.
# Tier 1-2 modules are fully strict. See overrides below for module categorization.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)|fonts_rc'
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "oncutf.*"
ignore_missing_imports = false

# ============================================================
# Tier 0 — Generated / auto files / external packages (NEVER check)
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.utils.ui.fonts_rc",
    "oncutf.ui.widgets.node_editor.*"
]
ignore_errors = true

# ============================================================
# Tier 1 — Interface-critical (controllers / services)
# STRICT checking enabled
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.controllers.*",
    "oncutf.services.*"
]
ignore_errors = false

# ============================================================
# Tier 2 — Core domain / logic (gradual clean)
# Focus areas for reducing error count
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.modules.*",
    "oncutf.metadata.*",
    "oncutf.models.*",
    "oncutf.domain.*",
    "oncutf.core.*"
]
ignore_errors = false
disallow_any_generics = true
disallow_subclassing_any = true

# ============================================================
# Tier 3 — Qt / UI / glue code (targeted error suppression)
# Suppress Qt stub noise via disable_error_code while catching logic bugs
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.ui.*",
    "oncutf.views.*",
    "oncutf.widgets.*",
    "oncutf.core.ui_managers.*",
    "oncutf.core.initialization.*",
    "oncutf.core.drag.*",
    "oncutf.core.events.*",
    "oncutf.core.selection.*",
    "oncutf.core.pyqt_imports",

    # utils: UI/Qt glue ONLY (whitelist) - updated paths for new structure
    "oncutf.utils.ui.tooltip_helper",
    "oncutf.utils.ui.dpi_helper",
    "oncutf.utils.ui.cursor_helper",
    "oncutf.utils.ui.dialog_utils",
    "oncutf.utils.ui.progress_dialog",
    "oncutf.utils.ui.multiscreen_helper",
    "oncutf.utils.ui.file_drop_helper",
    "oncutf.utils.ui.drag_zone_validator",
    "oncutf.utils.ui.smart_icon_cache",
    "oncutf.utils.ui.icons_loader",
    "oncutf.utils.ui.icon_cache",
    "oncutf.utils.ui.icon_utilities",
    "oncutf.utils.ui.svg_icon_generator",
    "oncutf.utils.ui.theme_font_generator",
    "oncutf.utils.ui.placeholder_helper",
    "oncutf.utils.ui.combo_popup_helper",
    "oncutf.utils.metadata.exiftool_adapter"
]
ignore_errors = false
disable_error_code = [
    "attr-defined",
    "call-arg",
    "arg-type",
    "override",
    "valid-type",
    "misc",
    "assignment",
    "unreachable",
    "unused-ignore",
    "union-attr",
    "has-type",
    "call-overload",
    "index",
    "var-annotated",
    "comparison-overlap",
]

# ============================================================
# Tier 4 — Legacy flat modules (temporary tolerance)
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.application",
    "oncutf.main",
    "oncutf.__main__",
    "oncutf.core.signal_coordinator",
    "oncutf.ui.services.utility_manager",
    "oncutf.ui.services.dialog_manager",
    "oncutf.core.event_handler_manager",
    "oncutf.core.file_load_manager",
    "oncutf.core.modifier_handler"
]
ignore_errors = true

# ============================================================
# Tests — Relaxed checking
# ============================================================
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
check_untyped_defs = false
disallow_untyped_defs = false

# --------------------------
# Ruff configuration
# --------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
# SAFETY: fix=false by default. Use 'ruff check . --fix' to auto-fix.
# This prevents unexpected code changes during regular lint checks.
fix = false
# NOTE: fonts_rc*.py are PyQt5 Resource Compiler generated files (100K+ lines)
# They should not be manually edited or linted.
exclude = ["backups", ".cache", "temp", "reports", "venv", "__pycache__", "*.pyc", "assets", "resources", "logs", "**/fonts_rc*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "G",   # flake8-logging-format (enforce lazy logging)
    "PLR", # pylint refactors (complexity, design patterns)
]
ignore = [
    "E501",   # line too long - mostly comments/docstrings that black can't fix
    "N802",   # function name should be lowercase
    "F403",   # wildcard import
    "F405",   # name may be undefined
    "E402",   # module level import not at top
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "SIM102", # nested if statements
    "TC001", # typing imports should be in TYPE_CHECKING block
    "TC002", # typing imports should be in TYPE_CHECKING block
    "TC003", # typing imports should be in TYPE_CHECKING block
    "ARG002", # unused method argument (intentional in polymorphic/override methods)
    "ARG004", # unused static method argument (intentional for API consistency)
    # PLR ignores - keep useful rules, ignore overly strict ones
    "PLR2004", # magic-value-comparison (too noisy for constants like 0, 1, 2)
    "PLR0911", # too-many-return-statements (common pattern in switch-like logic)
    "PLR0912", # too-many-branches (legacy code, will refactor gradually)
    "PLR0913", # too-many-arguments (common in PyQt signals/slots)
    "PLR0915", # too-many-statements (legacy __init__ methods)
    "PLR1704", # redefining-argument-from-local (intentional shadowing in loops)
]

# Per-file ignores for scripts and utilities
[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print statements in scripts
"tests/*.py" = ["T201"]     # Allow print statements in tests
"oncutf/utils/debug_*.py" = ["T201"] # Allow print in debug helpers

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["oncutf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --------------------------
# Pytest
# --------------------------
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short --strict-markers --strict-config"
testpaths = ["tests"]
qt_api = "pyqt5"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests that require GUI (skipped on CI)",
    "exiftool: marks tests that require exiftool",
    "local_only: marks tests that only run in local environment"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:PyQt5.*"
]

# --------------------------
# Coverage
# --------------------------
[tool.coverage.run]
source = ["oncutf"]
omit = [
    "tests/*",
    "venv/*",
    "*/site-packages/*",
    "setup.py",
    "conftest.py",
    "backups/*",
    "temp/*",
    "reports/*",
    "*.pyc",
    "__pycache__/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# ----------------------------------------
# Black configuration
# ----------------------------------------
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist|backups|temp|reports)/'

# ----------------------------------------
# Pre-commit hooks configuration
# ----------------------------------------
# Note: Pre-commit configuration moved to .pre-commit-config.yaml
# ----------------------------------------
