[project]
name = "oncutf"
version = "1.3.0"
description = "Advanced Batch File Renamer with EXIF Metadata Support and Professional UI"
authors = [
    {name = "Michael Economou", email = "info@oncut.gr"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["file-renamer", "batch-rename", "exif", "metadata", "photography", "pyqt5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt5>=5.15.11",
    "Pillow>=10.1.0",
    "charset-normalizer>=3.0.0",
    "psutil>=6.1.0",
    "aiofiles>=24.1.0",
    "typing_extensions>=4.0.0",
    "rawpy>=0.24.0",  # Python 3.12 wheels available from 0.24.0+
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "PyQt5-stubs>=5.15.6.0",
    "vulture>=2.3,<3"
]
test = [
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include non-Python files (fonts, icons, qss, images) loaded at runtime
include-package-data = true

[tool.setuptools.packages.find]
# IMPORTANT: Must match actual package layout (oncutf/core/, oncutf/ui/, etc.)
include = ["oncutf*"]
exclude = ["tests*", "docs*", "examples*", "scripts*", "temp*", "backups*", "reports*", "logs*"]

[tool.setuptools.package-data]
# Runtime assets loaded via get_project_root() / get_icons_dir() helpers
# Now located inside oncutf/resources/ package directory
oncutf = [
    "resources/fonts/**/*.ttf",
    "resources/icons/**/*.svg",
    "resources/icons/**/*.png",
    "resources/images/**/*.png",
    "resources/styles/**/*.qss",
    "ui/widgets/node_editor/themes/**/*.qss"
]

[project.urls]
Homepage = "https://github.com/mecondev/oncutf"
Repository = "https://github.com/mecondev/oncutf"
Documentation = "https://github.com/mecondev/oncutf/tree/main/docs"
Issues = "https://github.com/mecondev/oncutf/issues"

# --------------------------
# mypy configuration
# --------------------------
# Stricter checking for new architecture (app/domain/infra)
# Qt/UI errors are suppressed via disable_error_code in Tier 3 overrides.
# Tier 1-2 modules are fully strict. See overrides below for module categorization.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
exclude = '(^|/)(backups|\.cache|temp|reports|scripts|tools|examples)(/|$)|oncutf/ui/resources_rc\.py|oncutf/resources_rc\.py'
check_untyped_defs = true

# Stricter defaults for all modules
disallow_untyped_defs = false  # Enable gradually per tier
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
warn_return_any = false  # Enable in Tier 1 only

[[tool.mypy.overrides]]
module = "oncutf.*"
ignore_missing_imports = false

# ============================================================
# Tier 0 — Generated / auto files / external packages (NEVER check)
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.ui.widgets.node_editor.*"
]
ignore_errors = true

# ============================================================
# Tier 1 — New Architecture (app/domain/infra) — PRAGMATIC STRICT
# HIGHEST quality bar - these are the foundation layers
# Enable strict flags (mypy --strict equivalent, minus disallow_any_explicit/expr)
# NOTE: disallow_any_explicit/expr are intentionally omitted because:
# - Metadata domain legitimately uses dict[str, Any] for EXIF data (intrinsically untyped)
# - Validators need Callable[[Any], ...] for runtime validation of arbitrary data
# - File repository interfaces with untyped database manager
# This is a pragmatic choice for a metadata-centric application
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.app.ports.*",
    "oncutf.app.services.*",
    "oncutf.domain.*",
    "oncutf.infra.cache.*",
    "oncutf.infra.db.*",
    "oncutf.infra.external.*"
]
ignore_errors = false
# Core strict checks (already enabled)
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
no_implicit_reexport = true
strict_optional = true
# Additional strict flags (pragmatic subset)
disallow_any_unimported = true
disallow_any_decorated = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

# ============================================================
# Tier 2 — Controllers / Services (legacy) — GRADUAL STRICT
# Focus areas for reducing error count
# Enforce disallow_untyped_defs for controllers
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.controllers.*",
    "oncutf.models.*",
    "oncutf.core.*"
]
ignore_errors = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true  # Enforce typed functions
warn_return_any = true  # Stricter return type checking
no_implicit_reexport = true  # Require explicit __all__ for re-exports
strict_optional = true  # Stricter None checking

# ============================================================
# Tier 3 — Qt / UI / glue code (targeted error suppression)
# Suppress Qt stub noise via disable_error_code while catching logic bugs
# ============================================================
[[tool.mypy.overrides]]
module = [
    "oncutf.ui.*",
    "oncutf.core.ui_managers.*",
    "oncutf.core.initialization.*",
    "oncutf.core.drag.*",
    "oncutf.core.events.*",
    "oncutf.core.selection.*",
    "oncutf.core.modifier_handler",
    "oncutf.core.pyqt_imports",

    # Qt-heavy core modules
    "oncutf.core.metadata.*",
    "oncutf.core.file.load_manager",
    "oncutf.core.hash.hash_operations_manager",
    "oncutf.core.thumbnail.*",
    "oncutf.core.application_service",

    # Qt-heavy controllers
    "oncutf.controllers.ui.layout_controller",
    "oncutf.controllers.ui.window_setup_controller",
    "oncutf.controllers.ui.signal_controller",
    "oncutf.controllers.module_drag_drop_manager",
    "oncutf.controllers.header_interaction_controller",

    # Qt-heavy models
    "oncutf.models.file_table.*",
    "oncutf.models.results_table_model",

    # Qt-heavy modules
    "oncutf.modules.*",

    # Main entry point
    "main",

    # utils: UI/Qt glue ONLY (whitelist) - updated paths for new structure
    "oncutf.utils.ui.tooltip_helper",
    "oncutf.utils.ui.dpi_helper",
    "oncutf.utils.ui.cursor_helper",
    "oncutf.utils.ui.dialog_utils",
    "oncutf.utils.ui.progress_dialog",
    "oncutf.utils.ui.multiscreen_helper",
    "oncutf.utils.ui.file_drop_helper",
    "oncutf.utils.ui.drag_zone_validator",
    "oncutf.utils.ui.smart_icon_cache",
    "oncutf.utils.ui.icons_loader",
    "oncutf.utils.ui.icon_cache",
    "oncutf.utils.ui.icon_utilities",
    "oncutf.utils.ui.svg_icon_generator",
    "oncutf.utils.ui.theme_font_generator",
    "oncutf.utils.ui.placeholder_helper",
    "oncutf.utils.ui.combo_popup_helper",
    "oncutf.utils.ui.file_table_state_helper",
    "oncutf.utils.ui.fonts_rc",
    "oncutf.utils.metadata.exiftool_adapter"
]
ignore_errors = false
# NOTE: Only Qt-stub-specific errors remain disabled
# Removed: index (now enforced), unused-ignore (type:ignore cleanup complete)
disable_error_code = [
    "attr-defined",       # Qt dynamic attributes (e.g. Qt.AlignCenter)
    "call-arg",           # Qt signal/slot argument mismatches
    "arg-type",           # Qt widget type mismatches
    "override",           # Qt method signatures
    "valid-type",         # Qt type expressions
    "misc",               # Qt misc stub issues
    "call-overload",      # Qt overload resolution
    "assignment",         # Qt property type assignments
    "union-attr",         # Qt Optional patterns (many in widgets)
    "unreachable",        # False positives from Qt control flow
    "has-type",           # Qt forward references
    "var-annotated",      # Qt widget attributes
    "comparison-overlap", # Qt enum comparisons
]

# ============================================================
# Tests — Relaxed checking
# ============================================================
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
check_untyped_defs = false
disallow_untyped_defs = false

# --------------------------
# Ruff configuration
# --------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
fix = false
respect-gitignore = true
show-fixes = true
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "node_modules",
    ".cache",
    "temp",
    "backups",
    "reports",
    "scripts",
    "tools",
    "examples",
    "**/fonts_rc*.py",
    "**/resources_rc.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "ANN",  # flake8-annotations (type hints on public APIs) - GRADUAL
    "PTH",  # flake8-use-pathlib (prefer pathlib over os.path)
    "D",    # pydocstyle (docstring conventions)
    "PERF", # perflint (performance anti-patterns)
    "RET",  # flake8-return (return statement improvements)
    "ERA",  # eradicate (commented-out code)
    "TRY",  # tryceratops (exception handling best practices)
    "PIE",  # flake8-pie (misc lints)
    "T20",  # flake8-print (avoid print statements)
    "RSE",  # flake8-raise (exception raising improvements)
]
# Further reduced ignores - stricter enforcement
ignore = [
    # Core ignores (pre-existing)
    "E501",   # line too long - handled by formatter
    "N802",   # function name should be lowercase (Qt methods)
    "F401",   # imported but unused (re-exports in __init__.py)
    "N803",   # argument name should be lowercase (Qt arguments)
    "N806",   # variable in function should be lowercase (Qt variables)
    
    # Exception handling (gradual adoption)
    "TRY003", # avoid-specifying-long-messages-outside-exception-class (100+ violations)
    "TRY400", # error-instead-of-exception (legacy code pattern)
    
    # Print statements (allowed in scripts/debug)
    "T201",   # print-found (intentional in CLI/debug contexts)
    
    # Docstring rules (gradual adoption)
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "D401",   # imperative-mood (200+ violations, widespread in legacy code)
    "D205",   # missing-blank-line-after-summary (100+ violations)
    
    # ANN rules - Gradual adoption
    "ANN001", # missing-type-function-argument (427 violations)
    "ANN002", # missing-type-args (8 violations)
    "ANN003", # missing-type-kwargs (10 violations)
    "ANN201", # missing-return-type-undocumented-public-function (247 violations)
    "ANN202", # missing-return-type-private-function (161 violations)
    "ANN204", # missing-return-type-special-method (173 violations)
    "ANN205", # missing-return-type-static-method (1 violation)
    "ANN206", # missing-return-type-class-method (2 violations)
    "ANN401", # any-type (397 violations) - will enable selectively
]

# Per-file ignores for scripts and utilities
[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402", "TRY300"]  # Intentional sys.path setup before imports; false positive on return after try/except
"oncutf/__main__.py" = ["E402"]  # Entry point with sys.path setup
"tests/manual/*.py" = ["E402"]  # Manual test scripts are entry points
"tests/*.py" = ["D", "SIM117"]  # Test-specific ignores (T201/ARG/PLR families not selected)
"oncutf/utils/logging/logger_*.py" = ["RUF003", "D417"]  # EN-dash in comments (intentional) + *args/**kwargs
"oncutf/utils/naming/transform_utils.py" = ["RUF001", "RUF003", "D417"]  # Greek char transformations (intentional)
"oncutf/ui/resources_rc.py" = ["ALL"]  # Generated file
"oncutf/ui/helpers/fonts_rc.py" = ["ALL"]  # Generated files
"oncutf/ui/fonts_rc*.py" = ["ALL"]  # Generated files (legacy pattern)
"oncutf/ui/widgets/node_editor/**/*.py" = ["D417", "RUF001"]  # Node editor *args/**kwargs patterns + Unicode symbols
# New architecture layers - STRICT (minimal ignores)
"oncutf/app/**/*.py" = []  # No ignores for app/ layer
"oncutf/domain/**/*.py" = []  # No ignores for domain/ layer
"oncutf/infra/**/*.py" = []  # No ignores for infra/ layer
# UI layer - allow Qt patterns
"oncutf/ui/**/*.py" = ["D100", "D101", "D102", "D103"]  # Qt widgets may skip docstrings
# Legitimate Any usage (external APIs, dynamic data)
"oncutf/core/metadata/metadata_service.py" = ["ANN401"]  # Metadata values are truly dynamic
"oncutf/app/services/batch_service.py" = ["ANN401"]  # Generic batch operations with dynamic kwargs
"oncutf/core/hash/base_hash_worker.py" = ["ANN401"]  # Qt parent reference
"oncutf/core/hash/hash_worker.py" = ["ANN401"]  # Qt parent, Protocol kwargs
"oncutf/core/hash/parallel_hash_worker.py" = ["ANN401"]  # Qt parent
"oncutf/core/file/streaming_loader.py" = ["ANN401"]  # Qt parent and service references
"oncutf/core/file/operations_manager.py" = ["ANN401"]  # Qt parent, dynamic cache, callback
"oncutf/core/file/load_manager.py" = ["ANN401"]  # Qt parent, FileStore duck typing
"oncutf/core/cache/advanced_cache_manager.py" = ["ANN401"]  # Generic cache values
# Tests - exclude from type annotation requirements
"tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["oncutf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# --------------------------
# Pytest
# --------------------------
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short --strict-markers --strict-config"
testpaths = ["tests"]
qt_api = "pyqt5"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests that require GUI (skipped on CI)",
    "exiftool: marks tests that require exiftool",
    "local_only: marks tests that only run in local environment"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:PyQt5.*"
]

# --------------------------
# Coverage
# --------------------------
[tool.coverage.run]
source = ["oncutf"]
omit = [
    "tests/*",
    "venv/*",
    "*/site-packages/*",
    "setup.py",
    "conftest.py",
    "backups/*",
    "temp/*",
    "reports/*",
    "*.pyc",
    "__pycache__/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

# ----------------------------------------
# Pre-commit hooks configuration
# ----------------------------------------
# Note: Pre-commit configuration moved to .pre-commit-config.yaml
# ----------------------------------------
